[package]
name = "rust-samples"
version = "0.0.1"
authors = ["Alexander Samoilov <alexander.samoilov@gmail.com>"]

[dependencies]
num = "*"

[[bin]]
name = "array_vec_demo"
path = "src/array_vec_demo.rs"

[[bin]]
name = "kernel_iterator"
path = "src/kernel_iterator.rs"

[[bin]]
name = "binary_unate"
path = "src/binary_unate.rs"
