[package]
name = "rust-samples"
version = "0.0.1"
authors = ["Alexander Samoilov <alexander.samoilov@gmail.com>"]

[dependencies]
docopt = "*"
docopt_macros = "*"
rustc-serialize = "*"
endianness = "*"
argparse = "*"
num = "*"
numeric = "*"
dft = "*"
byteorder = "*"
#rustfft = "*"
arrayfire = "3.2.0"
special-fun = "*"
roots = "*"
indoc = "^0.1"
integration =  { git = "https://github.com/photino/integration.git" }

[[bin]]
name = "array_vec_demo"
path = "src/array_vec_demo.rs"

[[bin]]
name = "kernel_iterator"
path = "src/kernel_iterator.rs"

[[bin]]
name = "dllist_demo"
path = "src/dllist_demo.rs"

[[bin]]
name = "scl"
path = "src/scalar_conservation_law.rs"

[[bin]]
name = "scl_tr"
path = "src/scalar_conservation_law_tensor.rs"

[[bin]]
name = "binary_unate"
path = "src/binary_unate.rs"

[[bin]]
name = "convolve"
path = "src/fourier_shift_convolution.rs"

[[bin]]
name = "fft_kernels"
path = "src/fft_kernels.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "af_hi"
path = "src/af_sample.rs"

[[bin]]
name = "af_fft"
path = "src/af_fft.rs"

[[bin]]
name = "union"
path = "src/union.rs"

[[bin]]
name = "jinc"
path = "src/jinc.rs"

[[bin]]
name = "adt_enum"
path = "src/adt_enum.rs"

[[bin]]
name = "tiny"
path = "src/tiny.rs"

[[bin]]
name = "naval_fate"
path = "src/docopt_macro_use_case.rs"
