[package]
name = "welf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = { version = "0.11.0" }
clap = { version = "^4", features = ["derive"] }
gimli = "0.27.0"
goblin = "0.6"
indicatif = "0.17.3"
#leb128 = "0.2.5" #gimli already has had leb128
lief-cwal = "0.1.0"
