[package]
name = "libamg"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "*", features = [ "sparse", "io" ] }
nalgebra-sparse = "*"
num-complex = "*"
#[features]
#serde-serialize = [ "nalgebra/serde-serialize" ]
#io = [ "nalgebra/io" ]
